--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,9 @@ h2#my_name_1{
 	margin-top:-25px;
 	font-family:Helvetica,sans-serif;
 	font-weight:400;
-	color:rgb(8,134,143);
+	/*color:rgb(8,134,143);*/
+	/*color:rgb(166,0,14);*/
+	color:rgb(25,71,0);
 }
 hr{
  margin-right:-7px;
@@ -29,8 +31,8 @@ div#main > h1,h4
 ul#menu
 {
   list-style-type:none;
-  margin-left:40%;
-  margin-right:40%;
+  margin-left:35%;
+  margin-right:35%;
   margin-top:40px;
   padding:0;
   overflow:hidden;
