--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,34 @@
-body {
- background-color:rgb(232,247,197);
+@media(max-width:480px)
+{
+ body{
+   background-color:rgb(232,247,197);
+ }
 }
+@media(min-width:481px) and (max-width:767px)
+{
+ body{
+   background-color:rgb(232,247,197);
+ }
+}
+@media(min-width:768px) and (max-width:1024px)
+{
+ body{
+   background-color:rgb(232,247,197);
+ }
+}
+@media(min-width:1025px) and (max-width:1200px)
+{
+ body{
+   background-color:rgb(232,247,197);
+ }
+}
+@media(min-width:1201px)
+{
+ body{
+   background-color:rgb(232,247,197);
+ }
+}
+*/
 h2#my_name{
  font-family:Helvetica,sans-serif;
  font-weight:400;
