--- a/css/styles.css
+++ b/css/styles.css
@@ -1,85 +1,129 @@
-@media(max-width:480px)
+@media(min-width:480px)
 {
- body{
-   background-color:rgb(232,247,197);
+ ul#menu > li > a
+ { padding: 1px;
+  text-decoration: none;
  }
 }
-@media(min-width:481px) and (max-width:767px)
+@media(min-width:700px)
 {
- body{
-   background-color:rgb(232,247,197);
+ ul#menu > li > a
+ { padding: 3px;
+  text-decoration: none;
  }
 }
-@media(min-width:768px) and (max-width:1024px)
-{
- body{
-   background-color:rgb(232,247,197);
- }
+body
+{ background-color:rgb(232,247,197);
 }
-@media(min-width:1025px) and (max-width:1200px)
-{
- body{
-   background-color:rgb(232,247,197);
- }
+/* HEADER */
+div#header
+{ text-align:justify;
+  text-justify: inter-word;
 }
-@media(min-width:1201px)
+div#header > h2
 {
- body{
-   background-color:rgb(232,247,197);
- }
-}
-*/
-h2#my_name{
  font-family:Helvetica,sans-serif;
- font-weight:400;
+ font-weight:lighter;
  color:rgb(97,32,43);
 }
-h2#my_name_1{
-	margin-top:-25px;
-	font-family:Helvetica,sans-serif;
-	font-weight:400;
-	/*color:rgb(8,134,143);*/
-	/*color:rgb(166,0,14);*/
-	color:rgb(25,71,0);
+h2#my_name
+{letter-spacing: 2px;
+}
+h2#my_name_1
+{ margin-top:-25px;
+  letter-spacing:5px;
 }
 hr{
  margin-right:-7px;
  margin-left:-7px;
+ height:1px;
+ background-color:red;
 }
-div#main{
-  padding-top:50px;
-  height:70vh;
-  width:100%;
-}
-div#main > h1,h4
-{
-  text-align:center;
-}
+/***************/
 
+
+/* INDEX PAGE */
+
+div#home_wrapper{
+  display:grid;
+  grid-template-columns:repeat(4,1fr);
+  gap:10px;
+  grid-auto-rows: 200px;
+  grid-template-areas:
+  ". a a ."
+  ". a a .";
+}
+div#home_content
+{
+ grid-area:a;
+ align-self: center;
+ justify-self:center;
+}
+div#home_content > h1
+{
+ text-align:center;
+ font-family:Helvetica,sans-serif;
+ font-weight:bold;
+ font-size:250%;
+
+}
+div#home_content > img 
+{ display: block;
+  margin:auto;
+}
+/***************/
+
+
+/* FOOTER */
+div#footer
+{ width:100%;
+  position:fixed;
+  left:0;
+  bottom:10px;
+}
+div#div_menu
+{ display:table;
+  margin: 0 auto;
+}
 ul#menu
 {
   list-style-type:none;
-  margin-left:35%;
-  margin-right:35%;
-  margin-top:40px;
+  margin:0;
   padding:0;
-  overflow:hidden;
-  background-color:#dddddd;
 }
+ul#menu > li 
+{
+  display:inline;
+}
+ul#menu > li > a
+{ padding: 5px;
+  text-decoration: none;
+}
+ul#menu > li > a:hover
+{ font-size:10px;
+}
+/***************/
 
-ul#menu > li {
-	float: left;
+/* PROJECTS */
+div.project
+{ display: grid;
+ grid-template-columns:1fr 1fr;
+ grid-gap:1px;
 }
+div.project > div.project_image
+{ width:300px;
+ height:400px;
+ border-style:solid;
+}
+div.project > div.project_description
+{ width:300px;
+ height:400px;
+ border-style:solid;
+}
+div.project > div.project_image > img
+{max-width:100%;
+ height:auto;
+}
+/***************/
 
-ul#menu > li a{
-	display:block;
-	padding:8px;
-}
 
-div#footer{
- position:fixed;
- left:0;
- bottom:0;
- width:100%;
- text-align:center;
-}
