--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,8 @@
 @media(min-width:480px)
 {
- ul#menu > li > a
- { padding: 1px;
-  text-decoration: none;
- }
 }
 @media(min-width:700px)
 {
- ul#menu > li > a
- { padding: 3px;
-  text-decoration: none;
- }
 }
 body
 { background-color:rgb(232,247,197);
@@ -105,20 +97,23 @@ ul#menu > li > a:hover
 /***************/
 
 /* PROJECTS */
+div.center
+{display:grid;
+}
 div.project
-{ display: grid;
- grid-template-columns:1fr 1fr;
- grid-gap:1px;
+{ position:relative;
+  justify-self:center;
 }
 div.project > div.project_image
-{ width:300px;
- height:400px;
- border-style:solid;
+{ /*width:600px*/;
+  height:600px;
+  z-index:10;
 }
 div.project > div.project_description
-{ width:300px;
- height:400px;
- border-style:solid;
+{  position:absolute;
+  background-color:red;
+  top:0;
+  left:0;
 }
 div.project > div.project_image > img
 {max-width:100%;
