--- a/pug/projects.pug
+++ b/pug/projects.pug
@@ -5,14 +5,20 @@ html(lang='en')
   title Projects
  body
   include header.pug
-
-  div(class='project') 
-   div(class='project_image')
-    img(src='img/img.png')
-   div(class='project_description')
-     h4 KINI
-     p A TEMPLATED DATA STRUCTURE LIBRAY.
-     a(href="https://github.com/1pierres1u/kini") GITHUB LINK
+  div(class="center")
+   div(class='project') 
+    div(class='project_image')
+     img(src='img/kini.png')
+    div(class='project_description')
+      p KINI: A TEMPLATED DATA STRUCTURE LIBRAY.
+        a(href="https://github.com/1pierres1u/kini") GITHUB LINK
+  div(class="center")
+   div(class='project') 
+    div(class='project_image')
+     img(src='img/kini.png')
+    div(class='project_description')
+      p KINI: A TEMPLATED DATA STRUCTURE LIBRAY.
+        a(href="https://github.com/1pierres1u/kini") GITHUB LINK
 
   include footer.pug
   include script.pug  
