--- a/pug/projects.pug
+++ b/pug/projects.pug
@@ -15,7 +15,7 @@ html(lang='en')
   div(class="center")
    div(class='project') 
     div(class='project_image')
-     img(src='img/kini.png')
+     img(src='img/kini.PNG')
     div(class='project_description')
       p KINI: A TEMPLATED DATA STRUCTURE LIBRAY.
         a(href="https://github.com/1pierres1u/kini") GITHUB LINK
