--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,3 @@
-@media(min-width:480px)
-{
-}
-@media(min-width:700px)
-{
-}
 body
 { background-color:rgb(232,247,197);
 }
@@ -57,7 +51,6 @@ div#home_content > h1
  font-family:Helvetica,sans-serif;
  font-weight:bold;
  font-size:250%;
-
 }
 div#home_content > img 
 { display: block;
@@ -90,10 +83,16 @@ ul#menu > li
 ul#menu > li > a
 { padding: 5px;
   text-decoration: none;
+  font-family:Helvetica,sans-serif;
+  font-weight:bold;
+}
+ul#menu > li > a:visited
+{ color:blue;
 }
 ul#menu > li > a:hover
-{ font-size:10px;
+{ color:red;
 }
+
 /***************/
 
 /* PROJECTS */
@@ -105,8 +104,7 @@ div.project
   justify-self:center;
 }
 div.project > div.project_image
-{ /*width:600px*/;
-  height:600px;
+{ height:600px;
   z-index:10;
 }
 div.project > div.project_description
