--- a/pug/about.pug
+++ b/pug/about.pug
@@ -5,7 +5,18 @@ html(lang='en')
   title About
  body
   include header.pug
-  div(id='About')
-   h4 ABOUT
+  div(id='about_wrapper')
+   div(id='about_content')
+    div(class='text_content')
+     h3 About me 
+     p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. 
+    div(class='text_content')
+     h3 Interest 
+     p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. 
+    div(class='text_content')
+     h3 Education  
+     p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. 
+  
+  
   include footer.pug
   include script.pug
