--- a/pug/contact.pug
+++ b/pug/contact.pug
@@ -5,8 +5,15 @@ html(lang='en')
   title Contact
  body
   include header.pug
-  div
-   h1 CONTACT
+  div(id='contact_wrapper')
+   div(id='contact_content')
+    div(class='text_content')
+     h3 Email me 
+     p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. 
+    div(class='text_content')
+     h3 LinkedIn 
+     p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. 
+    div(class='text_content')
  
  include footer.pug
  include script.pug
