--- a/pug/index.pug
+++ b/pug/index.pug
@@ -7,7 +7,11 @@ html(lang='en')
   include header.pug
   div(id='home_wrapper')
    div(id='home_content')
-    h1 SOFTWARE DEVELOPPER
-    img(src='img/image_animated.png')
+    h1 SOFTWARE DEVELOPER
+    img(id="bar_1" src='img/img_bar.png')
+    img(id="bar_2" src='img/img_bar.png')
+    img(id="bar_3" src='img/img_bar.png')
+    img(id="bar_4" src='img/img_bar.png')
+    img(id="bar_5" src='img/img_bar.png')
   include footer.pug
   include script.pug
