--- a/pug/about.pug
+++ b/pug/about.pug
@@ -9,7 +9,12 @@ html(lang='en')
    div(id='about_content')
     div(class='text_content')
      h3 About me 
-     p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. 
+     p Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
+       totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae 
+       dicta sunt explicabo.  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+       sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro 
+       quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non 
+       numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
     div(class='text_content')
      h3 Interest 
      p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. 
