--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
 
 /*****************/
 
-img, p, ul,li
+img, p, ul,li,h4
 { margin:0;
   padding:0;
 }
@@ -28,8 +28,10 @@ body
 
 /* HEADER */
 div#header
-{ text-align:justify;
+{ width:100%;
+  text-align:justify;
   text-justify: inter-word;
+  border-bottom: 3px solid red;
 }
 div#header > h2
 {
@@ -93,7 +95,6 @@ div#about_wrapper{
 }
 div#about_content
 { grid-area:b;
-  /*position:relative;*/
   justify-self:center;
 }
 div.text_content
@@ -145,7 +146,6 @@ div#footer
 { width:100%;
   position:fixed;
   left:0;
-  /*bottom:10px;*/
   bottom:0;
   height: 30px;
   padding-top:10px;
@@ -190,19 +190,30 @@ div.project
 }
 
 div.project > div.project_image{ 
+  /*height: 400px;
+  width: 600px
+  object-fit:cover;
+  */
 }
 div.project > div.project_description{  
   margin-top:40px;
   background-color:var(--pd-bg);
-  height: 40px;
+  height: 60px;
+  padding-left:14px;
   padding-top:14px;
 }
-div.project > div.project_description > p
+div.project > div.project_description > h4 {  
+  margin-bottom: 6px;
+}
+div.project > div.project_description > *,a
 { color:var(--pd-tt);
+  font-size:18px;
+  font-family:Helvetica,Arial,sans-serif;
 }
 div.project > div.project_image > img
 {max-width:100%;
  height:auto;
+ border-bottom: 1px solid red;
 }
 /***************/
 
@@ -210,6 +221,17 @@ div.project > div.project_image > img
 @media screen and (min-width:1200px){
 div#about_wrapper{
  grid-template-columns: [a] 0.5fr [b] 1fr [c] 0.5fr;
+}
+}
+
+@media screen and (max-width:400px) {
+div.project > div.project_description > p
+{ color:var(--pd-tt);
+  font-size:18px;
+}
+div.project > div.project_description{  
+  padding-left:5px;
+  padding-top:5px;
 }
 }
 
