--- a/pug/projects.pug
+++ b/pug/projects.pug
@@ -8,17 +8,35 @@ html(lang='en')
   div(class="center")
    div(class='project') 
     div(class='project_description')
-      p KINI: A TEMPLATED DATA STRUCTURE LIBRAY.
-        a(href="https://github.com/1pierres1u/kini") GITHUB LINK
+      h4 KINI 
+      p Templated data structure library.  
+        a(href="https://github.com/1pierres1u/kini") github link
     div(class='project_image')
-     img(src='img/kini.PNG')
+     img(src='img/kini_1.PNG')
   div(class="center")
    div(class='project') 
     div(class='project_description')
-      p KINI: A TEMPLATED DATA STRUCTURE LIBRAY.
-        a(href="https://github.com/1pierres1u/kini") GITHUB LINK
+      h4 BANK-CONSOLE 
+      p  Banking app. 
+        a(href="https://github.com/1pierres1u/kini") github link
     div(class='project_image')
-     img(src='img/kini.PNG')
+     img(src='img/bank.PNG')
+  div(class="center")
+   div(class='project') 
+    div(class='project_description')
+      h4 RAICUP 2020 
+      p  Artificial intelligence competition. 
+        a(href="https://github.com/1pierres1u/kini") github link
+    div(class='project_image')
+     img(src='img/raicup2020.PNG')
+  div(class="center")
+   div(class='project') 
+    div(class='project_description')
+      h4 PERSONAL WEBSITE
+      p  My Website. 
+        a(href="https://github.com/1pierres1u/kini") github link
+    div(class='project_image')
+     img(src='img/personal_website.PNG')
 
   include footer.pug
   include script.pug  
