Added a js file to center vertically the main div of the index page. Tried the colors red as main color.

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -8,10 +8,11 @@ html(lang='en')
   div(id='home_wrapper')
    div(id='home_content')
     h1 SOFTWARE DEVELOPER
-    img(id="bar_1" src='img/img_bar.png')
-    img(id="bar_2" src='img/img_bar.png')
-    img(id="bar_3" src='img/img_bar.png')
-    img(id="bar_4" src='img/img_bar.png')
-    img(id="bar_5" src='img/img_bar.png')
+    img(id="bar_1" src='img/img_bar_white.png')
+    img(id="bar_2" src='img/img_bar_white.png')
+    img(id="bar_3" src='img/img_bar_white.png')
+    img(id="bar_4" src='img/img_bar_white.png')
+    img(id="bar_5" src='img/img_bar_white.png')
   include footer.pug
   include script.pug
+  script(src='js/center.js')
