--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,18 @@
 :root
 {
- --bg-cl:#FFFFDC; /* background color */
- --mn-lk:#001919; /* menu a */
- --mn-lk-vs:#001919; /* menu a visited*/
- --mn-bg: white; /* menu background*/
- --hd-nm:#001919; /* header name */
- --id-ct:#004C4C; /* index page content */
- --ab-tt:#001919; /* about page title */
- --ab-ct:#001919; /* about page paragraph */
+ --bg-cl:red; /* background color */
+ --mn-lk:green; /* menu a */
+ --mn-lk-vs:green; /* menu a visited*/
+ --mn-bg:white; /* menu background*/
+ --hd-nm:white; /* header name */
+ --id-ct:white; /* index page content */
+ --ab-tt:white; /* about page title */
+ --ab-ct:white; /* about page paragraph */
  --pd-bg:red; /* project description background */
  --pd-tt:white; /* project description text */
+ --bb-im:green;  /*border-bottom of images */
+ --bb-pd:white; /*border-bottom of project description */
+ --bb-hd:white; /*border-bottom of header */
 }
 
 
@@ -31,7 +34,7 @@ div#header
 { width:100%;
   text-align:justify;
   text-justify: inter-word;
-  border-bottom: 3px solid red;
+  border-bottom: 3px solid var(--bb-hd);
 }
 div#header > h2
 {
@@ -45,12 +48,6 @@ h2#my_name
 h2#my_name_1
 { margin-top:-25px;
   letter-spacing:5px;
-}
-hr{
- margin-right:-7px;
- margin-left:-7px;
- height:1px;
- background-color:red;
 }
 /***************/
 
@@ -105,7 +102,7 @@ div.text_content >  h3
   font-family:Helvetica,sans-serif;
   font-weight: lighter;
 }
-div#About > p 
+div.text_content > p 
 { color:var(--ab-ct);
   font-family:Helvetica,sans-serif;
   text-align:justify;
@@ -201,6 +198,7 @@ div.project > div.project_description{
   height: 60px;
   padding-left:14px;
   padding-top:14px;
+  border-bottom:1px solid var(--bb-pd);
 }
 div.project > div.project_description > h4 {  
   margin-bottom: 6px;
@@ -213,7 +211,7 @@ div.project > div.project_description > *,a
 div.project > div.project_image > img
 {max-width:100%;
  height:auto;
- border-bottom: 1px solid red;
+ border-bottom: 1px solid var(--bb-im); 
 }
 /***************/
 
@@ -235,3 +233,15 @@ div.project > div.project_description{
 }
 }
 
+@media screen and (max-width:401px)
+{
+}
+@media screen and (min-width:402px) and (max-width:403px)
+{
+}
+@media screen and (min-width:404px) and (max-width:405px)
+{
+}
+@media screen and (min-width:406px)
+{
+}
