Modified the size of the logo, which is my name. Used orange, black and white as colors. Add media queries for some screen sizes.

--- a/pug/about.pug
+++ b/pug/about.pug
@@ -8,7 +8,7 @@ html(lang='en')
   div(id='about_wrapper')
    div(id='about_content')
     div(class='text_content')
-     h3 About me 
+     h3 ABOUT ME 
      p Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae 
        dicta sunt explicabo.  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
@@ -16,11 +16,22 @@ html(lang='en')
        quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non 
        numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
     div(class='text_content')
-     h3 Interest 
-     p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. 
+     h3 INTEREST 
+     p Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
+       totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae 
+       dicta sunt explicabo.  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+       sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro 
+       quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non 
+       numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
     div(class='text_content')
-     h3 Education  
-     p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. 
+     h3 EDUCATION  
+     p Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
+       totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae 
+       dicta sunt explicabo.  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+       sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro 
+       quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non 
+       numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+     <br> <br> <br>
   
   
   include footer.pug
