--- a/pug/contact.pug
+++ b/pug/contact.pug
@@ -8,10 +8,10 @@ html(lang='en')
   div(id='contact_wrapper')
    div(id='contact_content')
     div(class='text_content')
-     h3 Email me 
+     h3 EMAIL ME 
      p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. 
     div(class='text_content')
-     h3 LinkedIn 
+     h3 LINKEDIN 
      p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed. 
     div(class='text_content')
  
