--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,33 @@
 :root
 {
- --bg-cl:red; /* background color */
+ --bg-cl:orange; /* background color */
  --mn-lk:green; /* menu a */
  --mn-lk-vs:green; /* menu a visited*/
  --mn-bg:white; /* menu background*/
- --hd-nm:white; /* header name */
- --id-ct:white; /* index page content */
+ --hd-nm:#295931; /* header name */
+ --id-ct:black; /* index page content */
  --ab-tt:white; /* about page title */
- --ab-ct:white; /* about page paragraph */
+ --ab-ct:black; /* about page paragraph */
  --pd-bg:red; /* project description background */
  --pd-tt:white; /* project description text */
  --bb-im:green;  /*border-bottom of images */
  --bb-pd:white; /*border-bottom of project description */
  --bb-hd:white; /*border-bottom of header */
+ --ab-ts:130%; /* about page title size */
+ --ab-ps:20%;  /* about page pargraph size*/
 }
 
 
 
 
 /*****************/
-
-img, p, ul,li,h4
+*
 { margin:0;
   padding:0;
+}
+body,html
+{width:100%;
+ height:100%;
 }
 
 body
@@ -35,38 +40,31 @@ div#header
   text-align:justify;
   text-justify: inter-word;
   border-bottom: 3px solid var(--bb-hd);
+  height:60px;
+  padding-top:20px;
 }
 div#header > h2
 {
  font-family:Helvetica,sans-serif;
- font-weight:lighter;
  color:var(--hd-nm);
-}
-h2#my_name
-{letter-spacing: 2px;
+ font-weight:normal;
+ margin-left:13px;
+ font-size:20px;
 }
 h2#my_name_1
-{ margin-top:-25px;
-  letter-spacing:5px;
+{ margin-top:-5px;
 }
 /***************/
 
 
 /* INDEX PAGE */
-
 div#home_wrapper{
   display:grid;
-  grid-template-columns:repeat(4,1fr);
-  gap:10px;
-  grid-auto-rows: 220px;
-  grid-template-areas:
-  ". a a ."
-  ". a a .";
+  grid-template-columns: [a] 0.1fr [b] 2.8fr [c] 0.1fr;
 }
 div#home_content
 {
- grid-area:a;
- align-self: center;
+ grid-area:b;
  justify-self:center;
 }
 div#home_content > h1
@@ -74,13 +72,21 @@ div#home_content > h1
  text-align:center;
  font-family:Helvetica,sans-serif;
  font-weight:bold;
- font-size:250%;
+ font-size:70px;
  color:var(--id-ct);
 }
 div#home_content > img 
 { display: block;
   margin:auto;
   margin-top:2px;
+}
+div.bar
+{height:10px;
+ width:190px;
+ margin-top:5px;
+ background-color:white;
+ margin:auto;
+ margin-top:2px;
 }
 /***************/
 
@@ -100,7 +106,8 @@ div.text_content
 div.text_content >  h3
 { color:var(--ab-tt);
   font-family:Helvetica,sans-serif;
-  font-weight: lighter;
+  font-size:var(--ab-ts);
+  margin-bottom:12px;
 }
 div.text_content > p 
 { color:var(--ab-ct);
@@ -110,10 +117,9 @@ div.text_content > p
 div#About > a
 { text-decoration:none;
 }
-div#About >  div.text_content
-{ border-bottom:1px solid red;
-  margin:auto;
-  margin-top: 60px;
+div.text_content
+{ margin:auto;
+  margin-top: 30px;
 }
 /**********/
 
@@ -222,26 +228,42 @@ div#about_wrapper{
 }
 }
 
-@media screen and (max-width:400px) {
+@media screen and (max-width:400px)
+{
 div.project > div.project_description > p
 { color:var(--pd-tt);
   font-size:18px;
 }
-div.project > div.project_description{  
+div.project > div.project_description
+{  
   padding-left:5px;
   padding-top:5px;
 }
+ div#home_content > h1
+ {
+   font-size:50px;
+ }
 }
 
-@media screen and (max-width:401px)
+@media screen and (min-width:402px) and (max-width:800px)
 {
+ div#home_content > h1
+ {
+   font-size:50px;
+ }
 }
-@media screen and (min-width:402px) and (max-width:403px)
+@media screen and (max-width:320px)
 {
+div.project > div.project_description > p,a
+{ font-size:16px;
 }
-@media screen and (min-width:404px) and (max-width:405px)
-{
+ul#menu > li > a
+{ padding: 3px;
+  font-size:14px;
 }
-@media screen and (min-width:406px)
+div#home_content > h1
 {
+ font-size:40px;
+}
+
 }
