--- a/pug/index.pug
+++ b/pug/index.pug
@@ -8,11 +8,11 @@ html(lang='en')
   div(id='home_wrapper')
    div(id='home_content')
     h1 SOFTWARE DEVELOPER
-    img(id="bar_1" src='img/img_bar_white.png')
-    img(id="bar_2" src='img/img_bar_white.png')
-    img(id="bar_3" src='img/img_bar_white.png')
-    img(id="bar_4" src='img/img_bar_white.png')
-    img(id="bar_5" src='img/img_bar_white.png')
+    div(class='bar' id="bar_1")
+    div(class='bar' id="bar_2")
+    div(class='bar' id="bar_3")
+    div(class='bar' id="bar_4")
+    div(class='bar' id="bar_5")
   include footer.pug
   include script.pug
   script(src='js/center.js')
